# akonadiconsole

./: .craft.ini  .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  akonadiconsole-version.h.cmake  akonadiconsole-version.h.in  akonadiconsole.categories  akonadiconsole.renamecategories  config-akonadiconsole.h.cmake  config-akonadiconsole.h.in
autotests/: CMakeLists.txt  jobtrackermodeltest.cpp  jobtrackermodeltest.h  jobtrackersearchwidgettest.cpp  jobtrackersearchwidgettest.h  jobtrackertest.cpp  jobtrackertest.h
po/ar/: akonadiconsole.po
po/ast/: akonadiconsole.po
po/bg/: akonadiconsole.po
po/ca/: akonadiconsole.po
po/ca@valencia/: akonadiconsole.po
po/cs/: akonadiconsole.po
po/de/: akonadiconsole.po
po/el/: akonadiconsole.po
po/en_GB/: akonadiconsole.po
po/eo/: akonadiconsole.po
po/es/: akonadiconsole.po
po/eu/: akonadiconsole.po
po/fi/: akonadiconsole.po
po/fr/: akonadiconsole.po
po/ga/: akonadiconsole.po
po/gl/: akonadiconsole.po
po/he/: akonadiconsole.po
po/hi/: akonadiconsole.po
po/hu/: akonadiconsole.po
po/ia/: akonadiconsole.po
po/it/: akonadiconsole.po
po/ja/: akonadiconsole.po
po/ka/: akonadiconsole.po
po/ko/: akonadiconsole.po
po/lt/: akonadiconsole.po
po/lv/: akonadiconsole.po
po/nl/: akonadiconsole.po
po/pl/: akonadiconsole.po
po/pt/: akonadiconsole.po
po/pt_BR/: akonadiconsole.po
po/ro/: akonadiconsole.po
po/ru/: akonadiconsole.po
po/sa/: akonadiconsole.po
po/sk/: akonadiconsole.po
po/sl/: akonadiconsole.po
po/sv/: akonadiconsole.po
po/ta/: akonadiconsole.po
po/tr/: akonadiconsole.po
po/ug/: akonadiconsole.po
po/uk/: akonadiconsole.po
po/zh_CN/: akonadiconsole.po
po/zh_TW/: akonadiconsole.po
src/: CMakeLists.txt  Messages.sh  agentconfigdialog.cpp  agentconfigdialog.h  agentconfigmodel.cpp  agentconfigmodel.h  agentwidget.cpp  agentwidget.h  agentwidget.ui  akonadibrowsermodel.cpp  akonadibrowsermodel.h  akonadiconsole.qrc  akonadiconsoleui.rc  browserwidget.cpp  browserwidget.h  browserwidget_contentview.ui  browserwidget_itemview.ui  collectionaclpage.cpp  collectionaclpage.h  collectionattributespage.cpp  collectionattributespage.h  collectioninternalspage.cpp  collectioninternalspage.h  connectionpage.cpp  connectionpage.h  dbaccess.cpp  dbaccess.h  dbbrowser.cpp  dbbrowser.h  dbbrowser.ui  dbconsole.cpp  dbconsole.h  dbconsoletab.ui  debugfiltermodel.cpp  debugfiltermodel.h  debugmodel.cpp  debugmodel.h  debugwidget.cpp  debugwidget.h  instanceselector.cpp  (+47 more)
src/icons/: CMakeLists.txt
